--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
-    "expo": "~50.0.14",
+    "expo": "~50.0.17",
     "expo-location": "~16.5.5",
     "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
@@ -20,9 +20,9 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.16.0",
-    "react-native-reanimated": "^3.8.1",
-    "react-native-screens": "^3.30.1"
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
