--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
-    "expo": "~50.0.17",
+    "expo": "^51.0.14",
+    "expo-linear-gradient": "~12.7.2",
     "expo-location": "~16.5.5",
     "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
@@ -23,8 +24,7 @@
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-reanimated": "~3.6.2",
-    "react-native-screens": "~3.29.0",
-    "expo-linear-gradient": "~12.7.2"
+    "react-native-screens": "~3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
